2003-04-30  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Maciej

        Tweaked some HTTP-specific NSURLRequest method names as specified
        in the API errata list.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]):
        (-[WebBaseNetscapePluginView _postURLNotify:target:len:buf:file:notifyData:allowHeaders:]):
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge createWindowWithURL:frameName:]):
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (+[WebSubresourceClient startLoadingResource:withURL:referrer:forDataSource:]):
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:willSendRequest:redirectResponse:]):
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultUIDelegate openNewWindowWithURL:]):
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _loadItem:withLoadType:]):
        (-[WebFrame _addExtraFieldsToRequest:alwaysFromRequest:]):
        (-[WebFrame _loadURL:referrer:loadType:target:triggeringEvent:form:formValues:]):
        (-[WebFrame _postWithURL:referrer:target:data:contentType:triggeringEvent:form:formValues:]):
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient connection:willSendRequest:redirectResponse:]):

2003-04-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken.

	Minor header tweaks.

        * Misc.subproj/WebDownload.h: Fix copyright notice.
        * Panels.subproj/WebAuthenticationPanel.h: Added 2003 to copyright.
        * WebView.subproj/WebAuthenticationChallenge.h: Fix copyright notice, add docs.
        * WebView.subproj/WebAuthenticationChallengeInternal.h: Fix copyright notice.

2003-04-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	Fixed imports and @class directives for WebFoundation changes.
