@@ -93,6 +93,8 @@ extern NSString *WebHistoryItemsKey;
     @discussion Get an array of NSCalendarDates, each one representing a unique day that contains one
     or more history items, ordered from most recent to oldest.
     @result Returns an array of NSCalendarDates for which history items exist in the WebHistory.
+    
+    ADVISORY NOTE:  This method may change for the 1.0 SDK.
 */
 - (NSArray *)orderedLastVisitedDays;
 
@@ -102,6 +104,8 @@ extern NSString *WebHistoryItemsKey;
     specified NSCalendarDate, ordered from most recent to oldest.
     @param calendarDate A date identifying the unique day of interest.
     @result Returns an array of WebHistoryItems last visited on the indicated day.
+
+    ADVISORY NOTE:  This method may change for the 1.0 SDK.
 */
 - (NSArray *)orderedItemsLastVisitedOnDay:(NSCalendarDate *)calendarDate;
 
